Quick fix (1 pixel gap! :O)

--- a/static/game/default.css
+++ b/static/game/default.css
@@ -3,3 +3,4 @@ body {background-color: #fff;}
 h1 {margin:20px; text-align:center;}
 div#content, form {margin:20px; font-size:13px;}
 form {padding-bottom:20px;}
+p {padding-left:0px;} 
